# n-body-sim

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  THIRD_PARTY_LICENSES.html  about.toml  build.rs  install.bat  install.sh  requirements.txt  run.bat  run.sh
.devcontainer/: devcontainer.json
benches/: barnes_hut_bench.rs  benchmarks.rs  common_bench.rs  criterion_benchmarks.rs  gpu_gravity_bench.rs  gpu_integrator_bench.rs  gravity_bench.rs  integrator_bench.rs  simulation_benchmarks.rs
cuda/: acceleration.cu  kernels.cu
data/: initial_conditions.csv
data/examples/: 0-descriptions.md  circle-2-body.csv  examples.md  figure-eight.csv  sun-earth-moon.csv  sun-earth-moon.json
data/initial-conditions-examples/: descriptions.md  ic-circle-2-body.csv  ic-figure-eight.csv
docs/: barnes-hut-octree.md  barnes-hut-octree.txt
gui/: controller.py  generators.py  launcher.py  runners.py  schema.py  storage.py
release/: README_release_template.txt  about.hbs
scripts/: controller.py  data.py  generators.py  install.bat  install.sh  launcher.py  main.py  models.py  plotter.py  release.sh  run.bat  run.sh  runner.py  runners.py  schema.py  storage.py  visualizer.py
src/: args.rs  benchmark.rs  body.rs  cli.rs  constants.rs  gpu.rs  gravity.rs  input.rs  integrators.rs  lib.rs  main.rs  n_body_sim.rs  output.rs  physics.rs  simulation.rs  simulation_runner.rs
src/gpu/: cuda_manager.rs  device_bodies.rs  gravity.rs  integrators.rs  simulation.rs
src/gravity/: barnes_hut.rs  newton.rs  newton_parallel.rs
src/integrators/: euler.rs  runge_kutta.rs  (+1 more)
(+26 files in other folders)
