[package]
name = "n-body-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "criterion_benchmarks"
harness = false

[[bench]]
name = "simulation_benchmarks"
harness = false
